Changes for 3.2.11rc1

New features:

Bug fixes:
..F....... [ZBX-13044] fixed undefined index when setting strict-transport-security http header (miks)
..F....... [ZBX-12897] fixed error causing empty list in popup window when opened from page having host group filter (gcalenko)
A.F....... [ZBX-12655] added filter on event details page to show messages sent to users only from same groups (gcalenko)
..F....... [ZBX-12247] fixed multiselect not showing results for read-only objects in screen configuration (Ivo)
..F....... [ZBX-12130] fixed max length validation in textarea fields (Ivo)
........S. [ZBX-12975] fixed possibility of foreign key constraint failure due to events being removed before trigger data storage period expires (vso)
........S. [ZBX-11426] fixed potentially incorrect delete procedure for problems and events (abs)
........S. [ZBX-12800] fixed incorrect trigger dependency calculation when processing dependent triggers in the same history syncer batch (wiper)
.......P.. [ZBX-12117] fixed proxy passing zeros to history export modules instead of actual numeric values (gleb)
..F....... [ZBX-12856] fixed wrong default value for host filter when adding dependent trigger in trigger edit form (gcalenko)
..F....... [ZBX-12082] fixed possibility to select triggers with same name in multiselect (Ivo)
..F....... [ZBX-11051] fixed displaying highest severity when dashboard filter options contain unacknowledged only (Ivo)

--------------------------------------------------------------------------------
Changes for 3.2.10

3.2.10rc1 was released as 3.2.10 without any changes

--------------------------------------------------------------------------------
Changes for 3.2.10rc1

New features:
..F....... [ZBXNEXT-1421] added service sorting by name if multiple services has same 'sortorder' value (miks)
..F....... [ZBXNEXT-4081] improved error message for case when none of supported database modules exists (gcalenko)

Bug fixes: